--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -61,6 +61,8 @@ if(UA_ENABLE_METHODCALLS)
   add_example(tutorial_server_method tutorial_server_method.c)
 endif()
 
+add_example(speedtest_client speedtest_client.c)
+
 add_example(tutorial_client_firststeps tutorial_client_firststeps.c)
 
 add_example(tutorial_client_events tutorial_client_events.c)
